--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@distube/spotify": "^1.5.1",
     "@distube/yt-dlp": "^1.1.3",
     "@distube/ytdl-core": "^4.13.3",
+    "@distube/ytsr": "^2.0.0",
     "@top-gg/sdk": "^3.1.5",
     "anime-actions": "^1.0.6",
     "discord-api-types": "^0.37.56",
